# this-day-in-zoom

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: agents-prd.md
src/tdiz/: __init__.py  cli.py  config.py  history.py  image_gen.py  prompt_builder.py  scheduler.py  zoom_client.py
tests/: test_cli.py  test_config.py  test_history.py  test_image_gen.py  test_prompt_builder.py  test_scheduler.py  test_zoom_client.py
